Fixing website tittle overflowing on the menu button

--- a/src/style.css
+++ b/src/style.css
@@ -2551,7 +2551,6 @@ body {
     line-height: 40px;
     display: inline-block;
     vertical-align: middle;
-    overflow: hidden;
     margin-top: 7px;
 }
 
